testing endpoint with jwt and roles